<resources>
    <string name="app_name">TicketMaster Events</string>
    <string name="startbuton_name">Start</string>
    <string name="texttile_name">Final Project</string>
    <string name="textauthor_name">CST2355</string>
    <string name="textprof_name">Professor: Abul Qasim, Samira Quaaz </string>
    <string name="textstudent_name">Students: Wei Zheng, Ran Tao, Andres Pedroza </string>
    <string name="title_activity_ticket_master_main">TicketMasterMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Saved Events</string>
    <string name="title_search">Search Events</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_info">About</string>
    <string name="text_search_fragment">This is search fragment</string>
    <string name="Hint_city">Search by City</string>
    <string name="Hint_radius">20</string>
    <string name="Text_city">City:</string>
    <string name="Text_radius">Radius:</string>
    <string name="Text_search">Search</string>
    <string name="Text_KM">KM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textHomeCity_name">Home City:</string>

    <string name="Hint_homecity">Input Your Home City</string>

</resources>