<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cst2335.finalproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.cst2335.finalproject.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.cst2335.finalproject.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_searchresult"
        android:name="com.cst2335.finalproject.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search_result" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.cst2335.finalproject.ui.notifications.NotificationsFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_notifications" />


    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.cst2335.finalproject.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>