<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".SearchFragment">


    <TextView
        android:id="@+id/textViewCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:text="@string/Text_city"
        android:textColor="#ecbd9d"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/editTextCity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="217dp"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/Hint_city"
        app:layout_constraintBottom_toTopOf="@id/textViewRadius"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCity" />

    <TextView
        android:id="@+id/textViewRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/Text_radius"
        android:textColor="#ecbd9d"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/editTextRadius"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextCity" />

    <EditText
        android:id="@+id/editTextRadius"
        android:layout_width="217dp"
        android:layout_height="45dp"
        android:ems="10"
        android:text="@string/Hint_radius"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/button_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRadius"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text_KM"
        app:layout_constraintLeft_toRightOf="@id/editTextRadius"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRadius"
        app:layout_constraintBottom_toTopOf="@id/button_search"
        />


    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/Text_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRadius" />

</androidx.constraintlayout.widget.ConstraintLayout>